// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  >
    box content
  </div>
</DocumentFragment>
`;

exports[`Box should match snapshot using element 1`] = `
<DocumentFragment>
  <a
    class="emotion-0"
    href="https://github.com/"
  >
    link content
  </a>
</DocumentFragment>
`;
